src/objects/X16_Weeks_Complaint__c.object
<CustomObject>
    <description>Detailed report of both closed and pending complaints. The report will list down all complaints that occurred 3 or more times on the same household for the past 16 weeks.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Copies__c</fullName>
        <label>Complaint Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complaint_From__c</fullName>
        <label>Complaint From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complaint_Pub_Code__c</fullName>
        <label>Complaint Pub Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_To__c</fullName>
        <label>Complaint To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name_Formula__c</fullName>
        <label>Contact Name Formula</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Address__c</fullName>
        <label>Recipient Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reclass_Approved_Rejected_By__c</fullName>
        <label>Reclass Approved / Rejected By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reclass_Date__c</fullName>
        <label>Reclass Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reclass_Status__c</fullName>
        <label>Reclass Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reclass_Sub_Category__c</fullName>
        <label>Reclass Sub Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_No__c</fullName>
        <label>Vendor No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Void_By__c</fullName>
        <label>Void By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Void_Date__c</fullName>
        <label>Void Date</label>
        <type>Date</type>
    </fields>
    <label>16 Weeks Complaint</label>
    <nameField>
        <label>16 Weeks Complaint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>16 Weeks Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>